32.11.0 (20-04-2022)
- Improvement: Copy learning languages in Degree Info
- Bug Fix: Fix NPE on method CurricularCourse.getAutonomousWorkHours(CurricularPeriod, ExecutionInterval)
- Refactor: Add code to party type
- Refactor: Organizational structure API improvements

32.10.5 (29-03-2022)
- Improvement: Summary can be created as soon as lesson starts 

32.10.4 (23-03-2022)
- Bug Fix: External curriculum groups should not be considered for conclusion purposes

32.10.3 (08-03-2022)
- Bug Fix: Add delete method for PersistentSpecialCriteriaOverExecutionCourseGroup

32.10.2 (07-03-2022)
- Refactor: Deprecate IAcademicTreasuryEvent::getExemptedAmount, which will be replaced by IAcademicTreasuryEvent::getNetExemptedAmount

32.10.1 (24-02-2022)
- Improvement: Added dates to DegreeOfficialPublication

32.10.0 (16-02-2022)
- Bug fix: Get curricular rules from curriculum module shouldn't reuse group rules result
- Improvement: Add taught languages field to competence course information 

32.9.10 (04-02-2022)
- Bug fix: Add missing AcademicPeriod.OTHER label
- Bug fix: Remove argument to check enrolments in active students group 

32.9.9 (07-12-2021)
- Improvement: Add types "EU_PERMANENT_RESIDENCE_CARD" and "EU_REGISTRATION_CERTIFICATE" to IDDocumentType

32.9.8 (19-11-2021)
- Refactor: Predicates in TreasuryEvent to check if it is related with tuition debts, and if the event discount on tuition total amount

32.9.7 (19-10-2021)
- Refactor: Add findByCode to DegreeType
- Refactor: Statute Type API cleanup
- Refactor: Ensure Statute Type code is required
- Refactor: Add creator method for Statute Type

32.9.6 (06-10-2021)
- Bug fix: Changed degree designation (SchoolLevelType.DOCTORATE_DEGREE SchoolLevelType.MASTER_DEGREE)

32.9.5 (06-10-2021)
- Improvement: Student group with argument to check enrolments

32.9.4 (30-09-2021)
- Improvement: Add presentation name to AcademicPeriod
- Refactor: Add RegistrationProtocol creator method